# indt-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: style.yml  test.yml
src/: lib.rs
tests/: test.rs
